--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "autoprefixer": "^10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "file-saver": "^2.0.5",
     "ic": "^0.0.1",
+    "ics": "^3.7.2",
     "lucide-react": "^0.324.0",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
@@ -51,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/file-saver": "^2.0.7"
   }
 }
